# bilog

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml  conanfile.txt  version.yml
.github/workflows/: bump.yml  cmake.yml  test.yml
benches/: CMakeLists.txt  file_bench.cpp  ringbuff_bench.cpp
bilog/: CMakeLists.txt
bilog/include/bilog/: bilog.hpp  event.hpp  level.hpp  tag.hpp
bilog/include/bilog/codec/: binary.hpp  text.hpp  typecode.hpp
bilog/include/bilog/sink/: buffer.hpp  file.hpp  ringbuff.hpp  stdout.hpp
bilog/src/: level_test.cpp
bilog/src/codec/: binary_test.cpp  event_test.cpp  text_test.cpp
bilog/src/sink/: buffer_test.cpp  file.cpp  file_test.cpp  ringbuff_test.cpp  stdout.cpp  stdout_test.cpp
examples/: CMakeLists.txt  binary_file.cpp  stdout.cpp
postproc/: CMakeLists.txt  main.cpp  schema.cpp  schema.hpp  schema_test.cpp  util.hpp  util_test.cpp
preproc/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp  parser_test.cpp  rewriter.cpp  rewriter.hpp  schema.cpp  schema.hpp  schema_test.cpp  util.hpp  util_test.cpp
readme/: architecture.md
scripts/: coverage.sh
tests/: CMakeLists.txt  test_utils.hpp
tests/data/: empty_id.cpp  valid_id.cpp
tests/data/multi_file/: CMakeLists.txt  README.md  main.cpp
tests/data/multi_file/log/: helpers.hpp  server.cpp  worker.cpp
tests/data/single_file/: CMakeLists.txt  main.cpp
tests/integration/: integration_test.py
